Commit : font change : spacing fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1596,7 +1596,9 @@ a:hover {
     margin-bottom: 0 !important;
 }
 .mcr-ftc {
-    margin-bottom: 37px;
+    margin-top: 37px;
+}
+.menu-table {
     margin-top: 37px;
 }
 .mcr-virus-pic {
